name:           wikirick
version:        0.1
synopsis:       A Wiki software.
description:    A Wiki software.
license:        BSD3
author:         Keita Mizuochi
maintainer:     mizon9@gmail.com
stability:      Experimental
category:       Web
build-type:     Simple
cabal-version:  >= 1.10

flag development
  description: Whether to build the server in development (interpreted) mode
  default: False

executable wikirick
  build-depends:
    MonadCatchIO-transformers   >= 0.2.1 && < 0.4,
    aeson                       >= 0.6,
    attoparsec                  >= 0.10,
    base                        >= 4.4 && < 5,
    bytestring                  >= 0.9.1 && < 0.11,
    data-default                >= 0.5,
    directory                   >= 1.2,
    filepath                    >= 1.3,
    heist                       >= 0.12 && < 0.13,
    io-streams                  >= 0.11,
    lens                        >= 3.7.6 && < 3.10,
    mtl                         >= 2 && < 3,
    snap                        >= 0.11 && < 0.13,
    snap-core                   >= 0.9 && < 0.11,
    snap-loader-static          >= 0.9 && < 0.10,
    snap-server                 >= 0.9 && < 0.11,
    text                        >= 0.11 && < 0.12,
    time                        >= 1.1 && < 1.5,
    xmlhtml                     >= 0.1
  default-extensions:
    DeriveDataTypeable,
    FlexibleContexts,
    FlexibleInstances,
    LambdaCase,
    NoMonomorphismRestriction,
    OverloadedStrings,
    RankNTypes,
    ScopedTypeVariables,
    TemplateHaskell
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans

test-suite unit-test
  build-depends:
    containers                  >= 0.5,
    hspec                       >= 1.7.2,

    MonadCatchIO-transformers   >= 0.2.1 && < 0.4,
    aeson                       >= 0.6,
    attoparsec                  >= 0.10,
    base                        >= 4.4 && < 5,
    bytestring                  >= 0.9.1 && < 0.11,
    data-default                >= 0.5,
    directory                   >= 1.2,
    filepath                    >= 1.3,
    heist                       >= 0.12 && < 0.13,
    io-streams                  >= 0.11,
    lens                        >= 3.7.6 && < 3.10,
    mtl                         >= 2 && < 3,
    snap                        >= 0.11 && < 0.13,
    snap-core                   >= 0.9 && < 0.11,
    snap-loader-static          >= 0.9 && < 0.10,
    snap-server                 >= 0.9 && < 0.11,
    text                        >= 0.11 && < 0.12,
    time                        >= 1.1 && < 1.5,
    xmlhtml                     >= 0.1
  default-extensions:
    DeriveDataTypeable,
    FlexibleContexts,
    FlexibleInstances,
    LambdaCase,
    NoMonomorphismRestriction,
    OverloadedStrings,
    RankNTypes,
    ScopedTypeVariables,
    TemplateHaskell
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src, spec
  main-is: SpecMain.hs
  type: exitcode-stdio-1.0
